pages/components/Header/header.module.css
.headerbar {
  list-style-type: none;
  display: flex;
  height: 4em;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  top: 0;
  width: calc(100% - 2 * 2.5% - 2 * 1rem);
  padding: 0 calc(2.5% + 1rem);
  z-index: 20;
  
}

.leftheader > a {
  font-size: var(--med-font);
  color: var(--neutral);
  padding: 0;
  text-decoration: inherit;
  font-weight: bolder;

}

.rightheader {
  font-size: var(--med-font);
  display: flex;
  align-items: center;
  gap: 1rem;
  font-weight: bolder;
  color: var(--neutral);
  
}

.rightheader a {
  text-decoration-color: transparent !important;

}

.contrast {
  color: var(--contrast); 

}

.headerbar svg {
  color: var(--contrast);
  font-size: var(--large-font);

}

.menuButton {
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: none;
  display: none;
  background: transparent;
}

.mobileMenu {
  visibility: hidden;
  display: flex;
  overflow: hidden;
  width: 100%;
  transition: transform 0.7s cubic-bezier(0.84, -0.01, 0.59, 0.3), visibility 1s;
  flex-direction: column;
  transform: translateY(-100%);
  height: 100dvh;
  padding-top: 6rem;
  position: absolute;
  z-index: 10;
  background-color: var(--background);
  justify-content: space-between;
}

.mobileTop {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.menuButton > svg {
  transition: transform 1s ease, opacity 1s ease;
}

.iconShrink {
  transform: rotate(0deg);
  opacity: 1;
}

.iconGrow {
  transform: rotate(90deg);
  opacity: 1;
}

.menuitem {
  width: 60%;
  margin: auto;
  font-size: var(--med-font);
  text-align: center;
  border: none;
  border-radius: var(--border-radius);
  padding: 0.5rem;
  background: transparent;
}

@media (max-width: 740px) {
  .rightheader .inside,
  .headerText {
    display: none;
  }

  .menuButton {
    display: inline;
  }
}

